--- a/package.json
+++ b/package.json
@@ -2,10 +2,20 @@
   "name": "neutralinojs-types",
   "version": "1.0.0",
   "description": "TypeScript definitions for Neutralinojs",
-  "main": "",
+  "main": "index.js",
   "types": "index.d.ts",
   "scripts": {},
-  "keywords": ["neutralinojs", "types"],
+  "keywords": [
+    "neutralinojs",
+    "types"
+  ],
+  "bugs": {
+    "url": "https://github.com/cbenriquez/neutralinojs-types/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cbenriquez/neutralinojs-types.git"
+  },
   "author": "Claude Bryan Enriquez",
   "license": "MIT"
 }
