--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "neutralinojs-types",
   "version": "1.1.1",
   "description": "TypeScript definitions for Neutralinojs",
-  "main": "index.js",
   "types": "index.d.ts",
   "scripts": {},
   "keywords": [
     "neutralinojs",
-    "types"
+    "types",
+    "typings"
   ],
   "bugs": {
     "url": "https://github.com/cbenriquez/neutralinojs-types/issues"
@@ -17,5 +17,8 @@
     "url": "https://github.com/cbenriquez/neutralinojs-types.git"
   },
   "author": "Claude Bryan Enriquez",
-  "license": "MIT"
+  "license": "MIT",
+  "peerDependencies": {
+    "typescript": "^4.1"
+  }
 }
