--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.1",
   "description": "TypeScript definitions for Neutralinojs",
   "types": "index.d.ts",
-  "scripts": {},
+  "scripts": {
+    "test": "tsc"
+  },
   "keywords": [
     "neutralinojs",
     "types",
