--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ root = true
 indent_style = space
 indent_size = 4
 end_of_line = lf
+quote_type = single
 charset = utf-8
 max_line_length = 120
 trim_trailing_whitespace = true
