--- a/.editorconfig
+++ b/.editorconfig
@@ -5,10 +5,15 @@ root = true
 
 [*]
 indent_style = space
-indent_size = 4
+indent_size = 2
+tab_width = 2
 end_of_line = lf
-quote_type = single
 charset = utf-8
+insert_final_newline = true
+
+[*.{ts,js}]
+indent_size = 4
+tab_width = 4
+quote_type = single
 max_line_length = 120
 trim_trailing_whitespace = true
-insert_final_newline = true
